Delete Methoden funktionstüchtig + Neue Datenbankstruktur
