# INSY/Projekt/REST/swagger.yaml
@@ -45,12 +45,19 @@ paths:
       responses:
         200:
           description: Erfolgreiche Anfrage. Gibt das hinzugefügte Benutzerkonto zurück.
-  /useraccounts/:user_id:
+  /useraccounts/{user_id}:
     delete:
-      summary: Gibt alle Adressen zurück.
+      summary: Löscht den angegebenen User
+      parameters:
+        - in: path
+          name: user_id
+          required: true
+          description: Die ID des zu löschenden Users
+          schema:
+            type: integer
       responses:
         200:
-          description: Erfolgreiche Anfrage. Gibt eine Liste der Adressen zurück.
+          description: Erfolgreiche Anfrage. Löscht User.
   /addresses:
     get:
       summary: Gibt alle Adressen zurück.
@@ -90,6 +97,19 @@ paths:
       responses:
         200:
           description: Erfolgreiche Anfrage. Gibt die hinzugefügte Adresse zurück.
+  /addresses/{address_id}:
+    delete:
+      summary: Löscht die angegebene Adresse
+      parameters:
+        - in: path
+          name: address_id
+          required: true
+          description: Die ID der zu löschenden Adresse
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Erfolgreiche Anfrage. Löscht Adresse.
   /productcatalog:
     get:
       summary: Gibt alle Produkte im Katalog zurück.
@@ -123,6 +143,19 @@ paths:
       responses:
         200:
           description: Erfolgreiche Anfrage. Gibt das hinzugefügte Produkt im Katalog zurück.
+  /productcatalog/{product_id}:
+    delete:
+      summary: Löscht das angegebene Produkt
+      parameters:
+        - in: path
+          name: product_id
+          required: true
+          description: Die ID des zu löschenden Produkts
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Erfolgreiche Anfrage. Löscht Produkt.
   /shoppingcart:
     get:
       summary: Gibt alle Warenkörbe zurück.
@@ -148,6 +181,19 @@ paths:
       responses:
         200:
           description: Erfolgreiche Anfrage. Gibt den hinzugefügten Warenkorb zurück.
+  /shoppingcart/{cart_id}:
+    delete:
+      summary: Löscht das angegebene Shoppingcart
+      parameters:
+        - in: path
+          name: cart_id
+          required: true
+          description: Die ID des zu löschenden Shoppingcarts
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Erfolgreiche Anfrage. Löscht Shoppingcart.
   /cartitems:
     get:
       summary: Gibt alle Warenkorbpositionen zurück.
@@ -175,6 +221,19 @@ paths:
       responses:
         200:
           description: Erfolgreiche Anfrage. Gibt die hinzugefügte Warenkorbposition zurück.
+  /cartitems/{cart_item_id}:
+    delete:
+      summary: Löscht das angegebene CartItem
+      parameters:
+        - in: path
+          name: cart_item_id
+          required: true
+          description: Die ID des zu löschenden CartItems
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Erfolgreiche Anfrage. Löscht CartItem.
   /orders:
     get:
       summary: Gibt alle Bestellungen zurück.
@@ -215,6 +274,19 @@ paths:
       responses:
         200:
           description: Erfolgreiche Anfrage. Gibt die hinzugefügte Bestellung zurück.
+  /orders/{order_id}:
+    delete:
+      summary: Löscht die angegebene Order
+      parameters:
+        - in: path
+          name: order_id
+          required: true
+          description: Die ID der zu löschenden Order
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Erfolgreiche Anfrage. Löscht Order.
   /orderitems:
     get:
       summary: Gibt alle Bestellpositionen zurück.
@@ -245,3 +317,16 @@ paths:
       responses:
         200:
           description: Erfolgreiche Anfrage. Gibt die hinzugefügte Bestellposition zurück.
+  /orderitems/{order_item_id}:
+    delete:
+      summary: Löscht das angegebene OrderItem
+      parameters:
+        - in: path
+          name: order_item_id
+          required: true
+          description: Die ID des zu löschenden OrderItems
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Erfolgreiche Anfrage. Löscht OrderItem
